--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,22 @@
 {
-  "short_name": "Sign Language Recognition AI",
-  "name": "Sign Language Recognition AI App",
+  "short_name": "Sign Swift",
+  "name": "Sign Swift",
   "icons": [
+    // {
+    //   "src": "favicon.ico",
+    //   "sizes": "64x64 32x32 24x24 16x16",
+    //   "type": "image/x-icon"
+    // },
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
+    // {
+    // "src": "logo512.png",
+    //   "type": "image/png",
+    //   "sizes": "512x512"
+    // }
   ],
   "start_url": ".",
   "display": "standalone",
